# solar-flare-project

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  solar-flare-project.code-workspace  swan_sf_init_exploration.ipynb
base_timeseries/: base_time_series.py  config.py  plot_graphs.py  preprocessed_partitions.py
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/: 0.1_JL_init_setup_train.ipynb  0.2_JL_setup_train_eval.ipynb  0.3.1_JL_setup_train_eval.ipynb  0.3_JL_setup_train_eval.ipynb  0.4_JL_patchTST.ipynb  0_5_JL_patchTST.ipynb  swan_sf_init_exploration.ipynb
patchTST/: 0_5_JL_patchTST.ipynb  0_6_JL_preprocessed_patchTST.ipynb  0_7_JL_patchTST.ipynb
reports/figures/: experiment_summary.csv  model_param_summary.txt
reports/results/: base_timeseries_results.xlsx  kaylie_results.xlsx  output.txt  output_10.txt  output_11.txt  output_3.txt  output_5.txt  output_6.txt  output_8.txt  output_9.txt  patchtst_25pair_summary_stats.csv  patchtst_experiment_summary.csv
solar_flare_project/: __init__.py  base_time_series.py  config.py  create_partitions.py  dataset.py  features.py  load_dataset.py  plot_graphs.py  plots.py  preprocessed_partitions.py  run.py  time_series_transformer_test.py  time_series_transformer_train.py  train.py
solar_flare_project/modeling/: predict.py  train.py
training/history/: history_1_1.json  history_1_2.json  history_1_3.json  history_1_4.json  history_1_5.json  history_2_1.json  history_2_2.json  history_2_3.json  history_2_4.json  history_2_5.json  history_3_1.json  history_3_2.json  history_3_3.json  (+12 more)
(+26 files in other folders)
