[build-system]
requires = ["flit_core >=3.2,<4"]
build-backend = "flit_core.buildapi"

[project]
name = "solar_flare_project"
version = "0.0.1"
description = "Solar flare prediction using time-series transformers"
authors = [
  { name = "Kaylie Aguila, Justin Landry" },
]
license = { file = "LICENSE" }
readme = "README.md"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License"
]
requires-python = ">=3.12,<3.13"



[tool.ruff]
line-length = 99
src = ["solar_flare_project"]
include = ["pyproject.toml", "solar_flare_project/**/*.py"]

[tool.ruff.lint]
extend-select = ["I"]  # Add import sorting

[tool.ruff.lint.isort]
known-first-party = ["solar_flare_project"]
force-sort-within-sections = true

